# thesis-code

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: auto-approve.yml  cd_app.yml  cd_apply.yml  cd_orch.yml  cd_tf.yml  ci.yml  ci_app.yml  ci_orch.yml  ci_tf.yml
BehavioBOT/: .gitignore  README.md  main.py  requirements.txt  tables.yaml
docs/: GCPArch.py
dwh/: behavio-sp-ddl.sql  create-invoice-alert-view.sql  create-materialized-invoice-views.sql  create_alert_views-bisp.sql
externalScripts/: mock-data.py  mock_invoices.csv  test-email-client.py  test.py  time-tracker-connector.py
infrastructure/environments/dev/: backend.tf  dev.auto.tfvars  main.tf  variables.tf  wif.tf
infrastructure/modules/behavio_bot/: main.tf  outputs.tf  variables.tf
infrastructure/modules/bigquery/: main.tf  outputs.tf  variables.tf
infrastructure/modules/state_bucket/: main.tf  outputs.tf  variables.tf
runtime/: alert_definitions.yaml  deploy-function.sh  email_report.html  email_template.html  email_trigger.html  gmail-api.py  mailgun-api.py  read-and-alert.py  requirements.txt  schedule-read.sh
src/BehavioBOT/: Dockerfile
src/BehavioBOT/.streamlit/: config.toml
src/automatedAlerting/: email_trigger.html  gmail-api-sa.py  gmail-api.py
src/externalScripts/: time-tracker-connector.py
